--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-      <link href="css/style.css" rel="stylesheet">
+      <link href="style.css" rel="stylesheet">
    </head>
    <body>
       <div class="grid"></div>
